# crm-lead-color

./: .gitignore  MANIFEST.in  README.md  push_to_github.sh  pyproject.toml  setup.py
lead_gender/: hooks.py  modules.txt
lead_gender/doctype/lead/: lead.js  lead.py
lead_gender/lead_gender/: __init__.py
lead_gender/lead_gender/doctype/lead/: lead.js  lead.json
lead_gender/lead_gender/public/js/: lead_gender.js
lead_gender/public/js/: lead_gender.js
